<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners">

    <LinearLayout
        android:id="@+id/events_create_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/events_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/events_name"
            android:singleLine="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/events_description" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_event_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/events_quota"
            android:singleLine="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_event_datepicker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/events_deadline"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/events_disclaimer" />

        <DatePicker
            android:id="@+id/dialog_event_datepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TimePicker
            android:id="@+id/dialog_event_timepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/events_select_location"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/dialog_event_create_maps"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_event_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/confirm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_event_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_clear_map" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_event_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>





