<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">
    <LinearLayout
        android:id="@+id/profile_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_rating_header"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/profile_rating_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_rating_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/profile_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:stepSize="0.1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_rating_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_stats_header"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/profile_numbers_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_friends_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_friends_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_participated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_participated_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_events_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_host_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/profile_host_title" />
        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/profile_bio_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_bio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_bio_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_edit_bio"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_edit_black_24dp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:paddingHorizontal="50dp"/>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/profile_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User tags"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_edit_tags"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_edit_black_24dp" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/profile_chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_add_tag"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_new_tag"
            app:icon="@drawable/ic_add_black_24dp" />

    </LinearLayout>
</ScrollView>